stylesheet.css
.flexbox-container {
    display: flex;
    background-color: #1f2937;
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.flexbox-item-top {
    background-color: #1f2937;
    color: white;
    margin: 10px;
    display: flex;
}

.flexbox-item-1 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-start;
    margin-right: auto;
}

.flexbox-item-2 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

.flexbox-item-3 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

.flexbox-item-4 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 10px;
    justify-content: flex-end;
}

/* This is the top header section */

.flexbox-item-awesome-head {
    display: flex;
    border: solid 10px white;
    margin: 30px;
    font-size: xx-large;
}

